--- a/subjects/SIP/Kamailio/Dockerfile
+++ b/subjects/SIP/Kamailio/Dockerfile
@@ -76,6 +76,7 @@ COPY --chown=ubuntu:ubuntu tools/drcov_spawn.sh ${WORKDIR}/drcov_spawn.sh
 COPY --chown=ubuntu:ubuntu tools/run_pin.sh ${WORKDIR}/run_pin.sh
 COPY --chown=ubuntu:ubuntu tools/pin_cov.cpp ${PIN}/source/tools/MyPinTool/pin_cov.cpp
 COPY --chown=ubuntu:ubuntu sip_fuzz.py ${WORKDIR}/sip_fuzz.py
+COPY --chown=ubuntu:ubuntu sip_fuzz_2.py ${WORKDIR}/sip_fuzz_2.py
 COPY --chown=ubuntu:ubuntu tools/frida-spawn.py ${WORKDIR}/frida-spawn.py
 
 # Compiling Pin Coverage
